# stream-companion

./: README.md  package-lock.json  package.json
backend/: index.ts  package-lock.json  package.json
backend/src/: ai.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ConfigForm.tsx  MessageForm.tsx
src/lib/: ai.ts  backend.ts  config.ts  stronghold.ts
