[package]
name = "stream-companion"
version = "0.1.0"
description = "An AI Streamer Companion that allows integration with many streaming platforms and services through Websocket."
authors = ["OllieDev"]
edition = "2021"

[profile.dev.package.scrypt]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stream_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

tauri-plugin-sql = { version = "2", features = ["mysql", "sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
rand = "0.8"
tauri-plugin-keyring = "0.1.0"
tauri-plugin-fs = "2"
